# Homemade_CommandPrompt

./: CMakeLists.txt
CommandPrompt/: CMakeLists.txt
CommandPrompt/include/Core/: Window.h  WindowEvent.h  WindowSDL.h
CommandPrompt/include/Core/General/: Color.h
CommandPrompt/include/Core/Rendering/: Drawable.h  Font.h  FontSDL.h  Renderer.h  RendererSDL.h  Text.h  TextLineSDL.h  TextSDL.h  Window.h  WindowSDL.h
CommandPrompt/include/EmbedResources/: EmbedResource.h  FontConsola.h
CommandPrompt/include/Events/: Event.h  Event.inl
CommandPrompt/include/Game/: Terminal.h
CommandPrompt/include/Utils/: EasyBind.h  RingBuffer.h  RingBuffer.inl  TerminalBuffer.h  TerminalBuffer.inl  VariableMonitor.h  VariableMonitor.inl  ustring.h
CommandPrompt/lib/: SDL2_ttf.lib  SDL2main.lib
CommandPrompt/src/: main.cpp
CommandPrompt/src/Core/: Window.cpp  WindowEvent.cpp  WindowSDL.cpp
CommandPrompt/src/Core/General/: Color.cpp
CommandPrompt/src/Core/Rendering/: FontSDL.cpp  RendererSDL.cpp  TextLineSDL.cpp  TextSDL.cpp  WindowSDL.cpp
CommandPrompt/src/Game/: Terminal.cpp
CommandPrompt/test/: CMakeLists.txt
CommandPrompt/test/include/: Test_Event.h
CommandPrompt/test/lib/: gtest.exp  gtest.ilk  gtest.lib  gtest_main.exp  gtest_main.ilk  gtest_main.lib
CommandPrompt/test/src/: Test_Event.cpp  main.cpp
cmake/: AutoIncludeDirectories.cmake  CopyDLLOnBuild.cmake  FindGLM.cmake  FindSDL2.cmake  FindSDL2TTF.cmake  SourceGroupByFolder.cmake
