CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
PROJECT (CommandPrompt_ROOT)
 
set(CMAKE_BINARY_DIR "${CMAKE_SOURCE_DIR}/build")
 
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")

SET (CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
SET (CMAKE_INCLUDE_PATH "${PROJECT_SOURCE_DIR}")

option (COMMAND_PROMPT_BUILD_TESTS "Build command prompt's testing." OFF)

ADD_SUBDIRECTORY (CommandPrompt)